更新应用配置，导入配置文件并使用环境变量设置数据目录；修改Dockerfile以使用Python 3.11；更新docker-compose.yml以支持数据卷和环境变量配置。

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,15 @@ version: '3'
 
 services:
   streamlit-app:
+    image: streamlit-ml-app
     build: .
     container_name: streamlit-ml-app
     ports:
       - "8501:8501"
     volumes:
       - ./:/app
+      - ${DATA_PATH:-./data}:/app/data
     restart: always
     environment:
-      - PYTHONUNBUFFERED=1 
+      - PYTHONUNBUFFERED=1
+      - DATA_DIR=/app/data 
